@@ -1,5 +1,9 @@
 2008-02-13  Sven Herzberg  <sven@imendio.com>
 
+	* prepare-ChangeLog.pl: included behdad's changes
+
+2008-02-13  Sven Herzberg  <sven@imendio.com>
+
 	* tools/prepare-ChangeLog.pl: re-merged the multiple-changelog support
 
 2008-02-02  Sven Herzberg  <sven@imendio.com>
